Adjusted the colour of buttons on various web pages based on the associated colour of the profile cd /copo ; /usr/bin/env /bin/python3 /root/.vscode-server/extensions/ms-python.python-2023.18.0/pythonFiles/lib/python/debugpy/adapter/../../debugpy/launcher 38495 -- /copo/manage.py runserver 0.0.0.0:8001  type

--- a/src/apps/copo_assembly_submission/templates/copo/copo_assembly.html
+++ b/src/apps/copo_assembly_submission/templates/copo/copo_assembly.html
@@ -52,7 +52,7 @@
                     <h3 class="copo-webui-popover-title">Assembly - Getting started</h3>
                     <div class="copo-webui-popover-content">
                         <div class="webpop-content-div">
-                            The assembly' page provides a platform for aligning and merging fragments of a
+                            The assembly page provides a platform for aligning and merging fragments of a
                             Deoxyribonucleic acid (DNA) sequence to reconstruct the original structure of the DNA.
                             <br/><br/>
                             <div>To add assemblies, click the
