--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -529,9 +529,9 @@
         <i class="icon plus sign"></i>
     </button>
 
-    <!-- button to upload spreadsheet for dtol users -->
+    <!-- button to upload spreadsheet for dtol/asg users -->
     <button style="display: none" title="Add Sample(s) from DTOL/ASG Spreadsheet"
-            class="big circular ui icon green button new-samples-spreadsheet-template copo-tooltip">
+            class="big circular ui icon button new-samples-spreadsheet-template copo-tooltip">
         <i class="icon table sign"></i>
     </button>
 
@@ -549,7 +549,7 @@
 
     <!-- button to upload spreadsheet for dtol users -->
     <button style="display: inline" title="Add Read(s) from Read Spreadsheet"
-            class="big circular ui icon green button new-reads-spreadsheet-template copo-tooltip">
+            class="big circular ui icon button new-reads-spreadsheet-template copo-tooltip">
         <i class="icon table sign"></i>
     </button>
 
@@ -573,7 +573,7 @@
 
     <!-- button to upload spreadsheet for barcoding -->
     <button style="display: inline" title="Add Tagged Sequence (s) from Tagged Sequence Spreadsheet"
-            class="big circular ui icon green button new-taggedseq-spreadsheet-template copo-tooltip">
+            class="big circular ui icon button new-taggedseq-spreadsheet-template copo-tooltip">
         <i class="icon table sign"></i>
     </button>
 
