--- a/src/apps/copo_read_submission/templates/copo/copo_read.html
+++ b/src/apps/copo_read_submission/templates/copo/copo_read.html
@@ -56,13 +56,16 @@
                     <h3 class="copo-webui-popover-title">Read - Getting started</h3>
                     <div class="copo-webui-popover-content">
                         <div class="webpop-content-div">
-                            The Read component of a profile <br/><br/>Select the correct 
-                            checklist and then click the
+                            The <strong>Read</strong> component of a profile
+                            <br/><br/>
+                            Select the desired checklist from the dropdown menu then, click the
                             <button class="circular tiny ui icon brown  button">
                                 <i class="icon download sign"></i>
                             </button>
-                            button to download the blank manfiest.  Once complete the manifest, you can click 
-                            <button class="circular tiny ui icon green  button">
+                            button to download the blank manfiest.  
+                            <br /><br />
+                            After having completed the manifest, click the
+                            <button id="help_add_button" class="circular tiny ui icon button">
                                 <i class="icon table sign"></i>
                             </button>
                             button to upload the manifest. 
