--- a/src/apps/copo_assembly_submission/templates/copo/copo_assembly.html
+++ b/src/apps/copo_assembly_submission/templates/copo/copo_assembly.html
@@ -30,6 +30,7 @@
     <div hidden id="hidden_attrs">
         <!-- hidden attributes  -->
         <input type="hidden" id="profile_title" value="{{ profile.title }}"/>
+        <input type="hidden" id="profile_type" value="{{ profile.type }}" />
         <input type="hidden" id="nav_component_name" value="assembly"/>
     </div>
 
