--- a/src/apps/copo_sample/templates/copo/copo_sample.html
+++ b/src/apps/copo_sample/templates/copo/copo_sample.html
@@ -78,6 +78,7 @@
         <input type="hidden" id="nav_component_name" value="sample"/>
         <input type="hidden" id="profile_id" value="{{ profile_id }}"/>
         <input type="hidden" id="profile_title" value="{{ profile.title }}"/>
+        <input type="hidden" id="profile_type" value="{{ profile.type }}" />
         <input type="hidden" value="{% url 'copo:copo_submissions' profile_id=profile_id %}" name="submission_url"
                id="submission_url"/>
         <input type="hidden" value="{{ profile.type }}" id="profile_type"/>
