--- a/src/apps/copo_profile/static/copo_profile/css/copo_profile_index.css
+++ b/src/apps/copo_profile/static/copo_profile/css/copo_profile_index.css
@@ -231,20 +231,20 @@ ul.associated_type_ulTag {
 
 /*CSS styles for profile records with associated types assigned*/
 .associated_type_div_value{
-    height: 60px;
+    height: fit-content;
     margin-bottom: 10px;
-    overflow: auto;
+    /*overflow-y: auto;*/
     padding-top: 15px;
-    columns: 2;
+    columns: 1;
 }
 
 /* Sequencing centres */
 .sequencing_centre_div_value {
-    height: 60px;
+    height: fit-content;
     margin-bottom: 10px;
-    overflow: auto;
+    /*overflow-y: auto;*/
     padding-top: 15px;
-    columns: 2;
+    columns: 1;
 }
 
 ul.sequencing_centre_ulTag {
