Codes changes for 'sample_audit' feature

--- a/src/apps/copo_landing_page/templates/frontpage.html
+++ b/src/apps/copo_landing_page/templates/frontpage.html
@@ -71,7 +71,7 @@
                 </div>
                 <div>
 
-                    <form id="email_form" action="mailto:copo@earlham.ac.uk?subject=I'm intetested in COPO!"
+                    <form id="email_form" action="mailto:ei.copo@earlham.ac.uk?subject=I'm intetested in COPO!"
                           method="post"
                           enctype="text/plain">
                         <div class="row">
