small changes to accept_reject view

--- a/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
+++ b/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
@@ -196,7 +196,7 @@
             <!--<div class="table_viewport">-->
             <h4 class="h4"><small class="labelling">Click a Profile on the left to see Samples.</small></h4>
 
-            <table id="profile_samples" class="table table-hover table-bordered display compact">
+            <table id="profile_samples" class="table table-hover table-bordered display compact nowrap">
                 <thead></thead>
                 <tbody></tbody>
             </table>
