--- a/src/apps/copo_sample/templates/copo/copo_sample.html
+++ b/src/apps/copo_sample/templates/copo/copo_sample.html
@@ -286,7 +286,7 @@
         <div id="component_table_loader" class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-5"
              data-copo-tour-id="sample_table"></div> <!-- div used by the quick tour agent -->
         <table id="sample_table"
-               class="ui celled table hover copo-noborders-table"
+               class="ui celled table hover copo-noborders-table compact nowrap"
                cellspacing="0" width="100%">
         </table>
 
