allow user to download the updated manifest and upload again

--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -417,6 +417,18 @@
             <i class=" fa fa-info"></i>
             <span class="action-label" style="padding-left: 3px;">Submit</span>
         </div>
+
+        <div class="download_sample_manifest_single tiny ui basic dtables-dbuttons  teal button copo-dt copo-tooltip" 
+            data-container="body"
+            data-action="download-sample-manifest"
+            data-error-message="Please select one of samples in the manifest to download"
+            data-btntype="single"
+            title="Download Sample Manifest"
+            tabindex="0">
+            <i class=" fa fa-download"></i>
+            <span class="action-label"    style="padding-left: 3px;">Download</span>
+        </div>
+
         <div class="btn-group btn-toggle toggle-view">
             <button class="btn btn-xs btn-success active">Other Projects' Accessions</button>
             <button class="btn btn-xs btn-default">Stand-alone Projects' Accessions</button>
