--- a/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
+++ b/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
@@ -149,6 +149,7 @@
                 <tr>
                     <th>Profile Title</th>
                     <th>Date Created</th>
+                    <th class="show_sample_links">Access to Samples</th>
                 </tr>
                 </thead>
                 <tbody></tbody>
