--- a/src/apps/copo_sample/templates/copo/copo_sample.html
+++ b/src/apps/copo_sample/templates/copo/copo_sample.html
@@ -100,6 +100,10 @@
     <!--test ends -->
     <input type="hidden" id="groups" value="{{ groups|safe }}"/>
 
+    <div style="display:none;">
+        <a id="download-sample-manifest-link"><span>download</span></a>
+    </div>  
+
     <!-- file upload control template -->
     <div id="file_upload_template1" style="display: none;">
         <div style="display: inline-block;">
