--- a/src/apps/copo_profile/static/copo_profile/css/copo_profile_index.css
+++ b/src/apps/copo_profile/static/copo_profile/css/copo_profile_index.css
@@ -72,6 +72,7 @@
     width: 195px;
 }
 
+#showMoreProfileInfoCloseBtn,
 #profileOptionsPopoverCloseBtn {
     cursor: pointer;
     font-size: 1rem;
