--- a/src/apps/copo_core/templates/copo/copo_group.html
+++ b/src/apps/copo_core/templates/copo/copo_group.html
@@ -4,7 +4,7 @@
 {% load web_tags_orcid %}
 {% load web_tags %}
 
-{% block title %}Group{% endblock %}
+{% block title %}Groups{% endblock %}
 
 {% block stylesheet_block %}
     <link rel="stylesheet" href="{% static 'copo/css/copo/browse_style.css' %}" xmlns="http://www.w3.org/1999/html">
@@ -139,7 +139,7 @@
 {% endblock %}
 
 
-{% block title_block %} COPO - Groups {% endblock %}
+{% block title_block %} Groups {% endblock %}
 
 {% block tagline_block %}
 
