--- a/src/apps/copo_file/templates/copo/copo_files.html
+++ b/src/apps/copo_file/templates/copo/copo_files.html
@@ -105,6 +105,7 @@
                     <h4 class="modal-title">Upload File</h4>
                 </div>
                 <div class="modal-body">
+                    <p>Upload files by browsing your local system</p>
                     <input id="file" type="file" style="display:none" multiple="multiple"
                            onchange="upload_files(this.files)">
                 </div>
