Added a 'SOP' download button

--- a/src/apps/copo_landing_page/templates/manifests.html
+++ b/src/apps/copo_landing_page/templates/manifests.html
@@ -47,6 +47,9 @@
                             <li><a id="asg_prefilled_template_option" class="wizard-link" href="javascript:"
                                    onclick="showWizardBasedOnManifestType('asg')"
                                    aria-hidden="true">Prefilled template</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="{{ 'ASG'|get_sop_url  }}">
+                                    Standard Operating Procedure (SOP)</a></li>
 
                         </ul>
                     </div>
@@ -69,6 +72,9 @@
                             <li><a id="dtol_prefilled_template_option" class="wizard-link" href="javascript:"
                                    onclick="showWizardBasedOnManifestType('dtol')"
                                    aria-hidden="true">Prefilled template</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="{{ 'DTOL'|get_sop_url  }}">
+                                    Standard Operating Procedure (SOP)</a></li>
                         </ul>
                     </div>
                 </td>
@@ -90,6 +96,9 @@
                             <li><a id="erga_prefilled_template_option" class="wizard-link" href="javascript:"
                                    onclick="showWizardBasedOnManifestType('erga')"
                                    aria-hidden="true">Prefilled template</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="{{ 'ERGA'|get_sop_url  }}">
+                                    Standard Operating Procedure (SOP)</a></li>
                         </ul>
                     </div>
                 </td>
